--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "explore/explore",
+    "name": "explore/src",
     "description": "the explorePHP",
     "type": "object",
     "license": "MIT",
