--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "explore/src",
     "description": "the explorePHP",
-    "type": "object",
+    "type": "project",
     "license": "MIT",
     "authors": [
         {
