--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=7.1"
+        "php": ">=7.1",
+        "phpoffice/phpexcel": "^1.8"
     },
     "autoload": {
         "psr-4": {
